# Noise

./: App.js  README.md  SPEC.md  app.json  package-lock.json  package.json
backend/: .env.example  .gitignore  pyproject.toml
backend/app/: config.py  logging.py  main.py
backend/app/aggregation/: __init__.py  claim_extractor.py  consensus_builder.py  evidence_ranker.py  final_writer.py  source_reader.py
backend/app/api/: routes.py
backend/app/chains/: llm.py  pipeline.py
backend/app/evaluation/: dataset.py  metrics.py  runner.py  schemas.py
backend/app/graph/: __init__.py  nodes.py  state.py  workflow.py
backend/app/models/: schemas.py
backend/app/observability/: trace_store.py  tracing.py
backend/app/retrieval/: __init__.py  embeddings.py  ingest.py  store.py
backend/app/tools/: definitions.py  scraper.py  search.py
backend/tests/: test_aggregation.py  test_api.py  test_evaluation.py  test_graph.py  test_observability.py  test_retrieval.py
